# subscription-app

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrybot.sh  entrypoint.sh  pyproject.toml
core/: __init__.py
core/api/: response_schemas.py  urls.py  utils.py
core/api/schemas/: pagination.py  response_schemas.py
core/api/utils/: response_builder.py
core/api/v1/: handlers.py  urls.py
core/api/v1/products/: handlers.py  schemas.py  urls.py
core/api/v1/subscriptions/: handlers.py  tariff_handlers.py  urls.py
core/api/v1/tariff/: handlers.py  urls.py
core/api/v1/users/: filters.py  handlers.py  urls.py
core/apps/common/: managers.py  models.py
core/apps/common/api/: renderers.py
core/apps/common/exceptions/: base_exception.py
core/apps/products/: admin.py  apps.py  models.py  serializers.py  tasks.py
core/apps/subscription/: admin.py  apps.py  models.py  serializers.py
core/apps/subscriptions/: admin.py  apps.py  models.py  serializers.py
core/apps/tariff/: admin.py  apps.py  models.py  serializers.py
core/apps/user/: admin.py  apps.py  managers.py  models.py  serializers.py
core/apps/users/: apps.py
core/apps/users/models/: __init__.py
core/project/: celery.py  containers.py  permissions.py  urls.py
core/project/middleware/: subscription_middleware.py
core/project/settings/: main.py
docker_compose/: app.yaml  entrypoint.sh  storages.yaml  tg_bot.yaml
telegram_bot/: bot_main.py  config.py  web_server.py
telegram_bot/db/: models.py  session.py
telegram_bot/handlers/: user_handlers.py
(+43 files in other folders)
